Fixed issue where splitting caused right waveform to overflow on to the next line

--- a/client/components/AudioBlock/AudioBlock.scss
+++ b/client/components/AudioBlock/AudioBlock.scss
@@ -2,5 +2,4 @@
   margin-left: 68px;
   margin-top: -1px;
   padding: 0 10px 0 10px;
-  width: 80vh
 }
